--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -32,7 +32,7 @@
 
         <!-- 公告 -->
         <div class="notice-zp">
-            <a href="{:url('index/my_message')}">EOS充值提现已全面恢复</a>
+            <a href="{:url('index/my_message')}">{$res['title']}</a>
         </div>
 
         <!-- 菜单导航 -->
@@ -105,7 +105,8 @@
                     <span class="close"><img src="__PUBLIC__/images/home/notice-close.png" /></span>
                 </div>
                 <div class="dialog-content">
-                    <p>EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复</p>
+                    <p>{$res['title']}</p>
+
                 </div>
                 <div class="dialog-btn">
                     <a href="javascript:void(0)">确定</a>
