--- a/application/admin/view/articles_add.html
+++ b/application/admin/view/articles_add.html
@@ -27,16 +27,16 @@
         <div class="layui-tab-item layui-show">
             <form class="layui-form form-container" data-url="{:url('admin/articles/save')}" localtion-url="{:url('articles/index')}">
                 <div class="layui-row layui-col-space15 layui-form-item">
-                    <div class="layui-col-md3">
-                        <label class="layui-form-label">所在专栏</label>
-                        <div class="layui-input-block">
-                            <select lay-verify="required" name="tid" lay-filter="tid"> 
-                                {volist name="category_level_list" id="vo"}
-                                <option value="{$vo.id}">{neq name="vo.level" value="1"}|{php}for($i=1;$i<$vo['level'];$i++){echo ' --';}{/php}{/neq}{$vo.name}</option>
-                                   {/volist}
-                 </select>
-                        </div>
-                    </div>
+                    <!--<div class="layui-col-md3">-->
+                        <!--<label class="layui-form-label">所在专栏</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<select lay-verify="required" name="tid" lay-filter="tid">-->
+                                <!--{volist name="category_level_list" id="vo"}-->
+                                <!--<option value="{$vo.id}">{neq name="vo.level" value="1"}|{php}for($i=1;$i<$vo['level'];$i++){echo ' &#45;&#45;';}{/php}{/neq}{$vo.name}</option>-->
+                                   <!--{/volist}-->
+                 <!--</select>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <div class="layui-col-md9">
                         <label for="L_title" class="layui-form-label">标题</label>
                         <div class="layui-input-block">
@@ -64,19 +64,19 @@
                         <img class="layui-upload-img" id="picshow" style="max-height: 200px">
                     </div>
                 </div>
-                <div class="layui-form-item" style="margin-top: 20px;margin-bottom: 10px;">
-                    <div class="layui-inline">
-                        <label class="layui-form-label">外链地址</label>
-                        <div class="layui-inline" style="margin-left:0px;">
-                            <input name="outlink" type="text" placeholder="点击标题可直接跳转（需以http或开头）" autocomplete="off" class="layui-input" style="width: 400px;float: left;">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <td align="center">
-                            <input name="piclocal" type="checkbox" lay-filter="piclocal" value="1" title="远程图片本地化" checked /> 如被复制的网页含图片较多，请取消此选项，以免保存缓慢！
-                        </td>
-                    </div>
-                </div>
+                <!--<div class="layui-form-item" style="margin-top: 20px;margin-bottom: 10px;">-->
+                    <!--<div class="layui-inline">-->
+                        <!--<label class="layui-form-label">外链地址</label>-->
+                        <!--<div class="layui-inline" style="margin-left:0px;">-->
+                            <!--<input name="outlink" type="text" placeholder="点击标题可直接跳转（需以http或开头）" autocomplete="off" class="layui-input" style="width: 400px;float: left;">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="layui-inline">-->
+                        <!--<td align="center">-->
+                            <!--<input name="piclocal" type="checkbox" lay-filter="piclocal" value="1" title="远程图片本地化" checked /> 如被复制的网页含图片较多，请取消此选项，以免保存缓慢！-->
+                        <!--</td>-->
+                    <!--</div>-->
+                <!--</div>-->
 
                 <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">内容</label>
