--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -103,15 +103,10 @@
                     <span class="close"><img src="__PUBLIC__/images/home/notice-close.png" /></span>
                 </div>
                 <div class="dialog-content">
-<<<<<<< HEAD
                     <p>{$res['title']}</p>
-
-=======
-                    <p>EOS充值提现已全面恢复EOS充值提现已全面恢复EOS充值提现已全面恢复</p>
->>>>>>> 2a0d72bb06df59b93f289282071b832f280083e3
                 </div>
                 <div class="dialog-btn">
-                    <a href="#">查看详情</a>
+                    <a href="{:url('index/news_details',['id'=>$res['id']])}">查看详情</a>
                 </div>
             </div>
         </div>
