--- a/application/index/view/login_directdrive.html
+++ b/application/index/view/login_directdrive.html
@@ -22,7 +22,7 @@
         <div class="community ">
             <div class="community_content">
                 社区业绩
-                <div class="community_num publicEllipsis">$&nbsp;<strong>999999999999999999</strong></div>
+                <div class="community_num publicEllipsis">$&nbsp;<strong>{$money}</strong></div>
             </div>
         </div>
         <!-- 社区业绩-e  -->
