--- a/application/index/view/my_edituser.html
+++ b/application/index/view/my_edituser.html
@@ -45,7 +45,7 @@
 				<div class="lj_sz_btn">
 					<a id="lj_sz_btn_a" href="JavaScript:void(0);" onclick="save()">保存</a>
 					<!-- <a class="lj_sz_btn_a" href="#">保存</a> -->
-					<a href="{:url('index')}">退出登录</a>
+					<a href="{:url('index')}" onclick="quit()" >退出登录</a>
 				</div>
 			</form>
 			</div>
@@ -96,6 +96,9 @@
 					alert("邮箱不能为空");
 				}
 			};
+			function quit(){
+				window.localStorage.removeItem('stamp');  //删除
+			}
 		</script>
 	</body>
 </html>
