--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -131,35 +131,36 @@
                 autoplay: 3000,
                 autoplayDisableOnInteraction: false
             }); 
-            var now = new Date().getTime() //当前的时间
+           
             var alread  //现在的时间  3600000
-         function ttmm(aa,bb){
+            setInterval(function(){
+                console.log(11)
                 if (!isNaN(parseInt(sessionStorage.getItem('begin')))){
                     alread=parseInt(sessionStorage.getItem('begin'))
-                    console.log(now)
+                    var bb = new Date().getTime()   //时间
                     console.log(alread)
-                    console.log(now-alread)
                 }
-                if(now-alread>5000){
-                     console.log(now-alread>5000)
+                 if(bb-alread>=20000){
+                     console.log(bb-alread>=20000)
                     $(".mode").show();
                     $(".dialog-notice").show();
-                    stop(".mode");
-                    sessionStorage.clear()
+                    document.body.style.overflow = 'hidden';
+                    window.sessionStorage.clear()
+                    
+                    console.log(sessionStorage.getItem('begin'))
+                    alread = 0
+                    console.log(alread)
                 }
-                 //sessionStorage.clear()
-            } 
-            setTimeout(ttmm(now,alread), 1000)
-            //公告弹框 
-            setTimeout(function (){
-                $(".mode").show();
-                $(".dialog-notice").show();
-                stop(".mode");
-                document.body.style.overflow = 'hidden';
-            }, 1000)
+            },1000)
+            // //公告弹框 
+            // setTimeout(function (){
+            //     $(".mode").show();
+            //     $(".dialog-notice").show();
+            //     stop(".mode");
+            //     document.body.style.overflow = 'hidden';
+            // }, 1000)
 
 
-             var time = new Date().getTime()
              
             //阻止冒泡，点击弹框禁止页面滚动
             $(".dialog-notice").bind("touchmove","touchstart",function(event){ 
@@ -171,9 +172,8 @@
             $(".dialog-notice .close,.dialog-btn a").click(function () {
                 $(".mode").hide();
                 $(".dialog-notice").hide();
-                sessionStorage.setItem('begin',time)
-                console.log(time)
-                console.log( sessionStorage.getItem('begin'))
+                sessionStorage.setItem('begin',new Date().getTime())
+                // console.log( sessionStorage.getItem('begin'))
                 document.body.style.overflow = ''; //出现滚动条
             })
         
