--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -6,11 +6,10 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>登录</title>
 		<script src="__PUBLIC__/js/rem.js"></script>
-		<link rel="stylesheet" href="__PUBLIC__/css/reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/css/reset.css?v=10">
 		<link rel="stylesheet" href="__PUBLIC__/css/base.css" />
 		<link rel="stylesheet" href="__PUBLIC__/css/login/login.css">
 		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
-        
 	</head>
 
 	<body>
