--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -163,6 +163,7 @@ color: #b8c9cf
     line-height: .5rem;
     text-align: center;
     width: 2rem;
+    font-size: .2rem;   
 }
 /* 验证框 */
 .from-group .from-verify{
