--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -2,6 +2,10 @@
 登录样式表
 */
 body {
+    width: 100%;
+    height: 100vh;
+    font-size: 0.24rem;
+    font-family: "PingFangMedium";
     background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #5ebfc8));
     background: -webkit-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
