--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -258,30 +258,30 @@
 		<script src="__PUBLIC__/plugins/layui/layui.js"></script>
 
 		<script>
-			// function phonecode(phoneS){
-			// 	        // var phone= {$phone}
-			// 			// 获取验证码
-			// 			// console.log(phoneS)
-			// 			// return false;
-			// 			var a = '13612560591';
-			// 			$.ajax({
-			// 				url: '/index/index/getPhoneVerify',
-			// 				type: 'post',
-			// 				dataType: 'json',
-			// 				data: {phone:phoneS, sms_type:2},
-			// 				success:function(msg){
-			// 				// console.log(msg);
-            //                 // $('#sms_type').val(1);
-			// 				// $('#verify').val(msg.code);
-			// 				if(msg.code!=0){
-			// 				layer.msg('已发送');
-			// 				}else{
-			// 				layer.msg(msg.msg);
-			// 				return false;
-			// 				}
-			// 			}
-			// 			});
-			// }
+			function phonecode(phoneS){
+				        // var phone= {$phone}
+						// 获取验证码
+						// console.log(phoneS)
+						// return false;
+						var a = '13612560591';
+						$.ajax({
+							url: '/index/index/getPhoneVerify',
+							type: 'post',
+							dataType: 'json',
+							data: {phone:phoneS, sms_type:2},
+							success:function(msg){
+							// console.log(msg);
+                            // $('#sms_type').val(1);
+							// $('#verify').val(msg.code);
+							if(msg.code!=0){
+							layer.msg('已发送');
+							}else{
+							layer.msg(msg.msg);
+							return false;
+							}
+						}
+						});
+			}
 
 
 			//复投按钮
@@ -402,11 +402,11 @@
 					e.stopPropagation();
 				});
 				//弹框确认
-				$('.true').click(function() {
-					$('.popover').hide();
-					$('.voting').hide();
+				// $('.true').click(function() {
+				// 	$('.popover').hide();
+				// 	$('.voting').hide();
 					
-				});
+				// });
 				//弹框取消
 				$('.false').click(function() {
 					// $('.popover').hide();
@@ -419,15 +419,15 @@
 					window.location.reload(); 
 				})
 				//点击背景隐藏and提取按钮清空提取金额的值
-				$('.popover,.popover_affirm').click(function() {
-					$(".popover").hide();
-					$('#popover_num').val("");
-					$(".lj_input2").val("");
-					$(".lj_input3").val("");
-					$('#popover_convert').val("");
-					$(".preViewImg").attr("src","/public//plugins/layui/images/loading-2.gif").hide();
-					$(".tipsText").show();
-				})
+				// $('.popover,.popover_affirm').click(function() {
+					
+					// $('#popover_num').val("");
+					// $(".lj_input2").val("");
+					// $(".lj_input3").val("");
+					// $('#popover_convert').val("");
+					// $(".preViewImg").attr("src","/public/plugins/layui/images/loading-2.gif").hide();
+					// $(".tipsText").show();
+				// })
 				//点击复投按钮清空提取金额的值
 				$('.voting,.voting_affirm').click(function() {
 					$(".voting").hide();
@@ -456,9 +456,6 @@
 				type: "POST",
 				url: url,
 				dataType: "json",
-				error: function () {
-                		alert('操作失败');
-            	},
 				success: function (data) {
 					if (data.status == 1) {
 							$('#popover_convert').val(data.result);
@@ -490,18 +487,13 @@
 										$(".time").html(data.result['su_time']);
 										// $(".su_img").attr("src",'uploads/20190315/0df1db2c2ee20754aec90be97791bb54.jpg');
 										// $(".time").html(Date('Y-m-d,H-s-i',data.result['su_time']))
+										$(".popover").hide();
 										$('.true_popUp_wrap').show();
-										
-										// console.log(Date('Y-m-d,H-s-i',data.result['su_time']))					
-									// window.location.reload(); 
-								// });
 							}
 							else {
-									// layer.msg(data.msg, {icon: 2, anim: 0, time: 2000});
-									layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-									// window.location.reload(); 
+									layer.msg(data.msg, {icon: 2, time: 2000}, function(){	
 									});
-										// window.location.reload(); 
+									
 							}
 						});
 
@@ -509,14 +501,8 @@
 			});
 
 			jq('.retrue').click(function(){	 
-				     
-					//  var val = $(".popover_click").attr("data-id") 
 					 var val1 = $(".voting_click").attr("data-id") 
-					//  console.log(val)
-					//  console.log(val1)
-					 // console.log($('#handleposition').serialize())
-					//  var url = "{:url('/index/wallet/confirmInvest')}";
-						var url = "{:url('/index/wallet/confirmInvest')}";
+					 var url = "{:url('/index/wallet/confirmInvest')}";
 					 var datas =  $('#handleposition1').serialize()+'&wallet_flag='+val1+'&pay_way='+2;
 
 					 $.ajax({
@@ -524,9 +510,6 @@
 						url: url,
 						data:datas,
 						dataType: "json",
-						// error: function () {
-						// 		alert('操作失败');
-						// },
 						success: function (data) {
 							if (data.code == 200) {
 									 layer.msg(data.msg, {icon: 1, time: 2000}, function(){					
@@ -540,24 +523,7 @@
 									});
 							 }
 						}
-					});
-
-
-					//  jq.getJSON(url,datas,function(data){						
-					// 		 if (data.status == 200) {
-					// 				 layer.msg(data.msg, {icon: 1, time: 2000}, function(){					
-					// 				 window.location.reload(); 
-					// 			 });
-														 
-					// 		 }
-					// 		 else{	 
-					// 				layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-					// 				 	window.location.reload(); 
-					// 				});
-					// 		 }
-					// 	 });
- 
- 
+					}); 
 			 });
 
 
@@ -573,11 +539,6 @@
 					type: "POST",
 					url: url,
 					dataType: "json",
-					// error: function () {
-					// 	layer.msg('请填写提币数量', {icon: 2, time: 2000}, function(){					
-					// 			window.location.reload(); 
-					// 	});
-					// },
 					success: function (data) {
 						if (data.status == 1) {
 								$('#popover_rmb').val(data.result['rmb']);
@@ -672,7 +633,7 @@
 			}
 			
 			/* 确认 */
-			$('.popover_affirm .true').on('click', function() {
+			// $('.popover_affirm .true').on('click', function() {
 				/*存储，base64*/
 				// var arrImgUrl = '';
 				// if($('.imageEchoBox .preViewImg').eq(0).attr('src').indexOf('base64') == -1 ) {
@@ -694,8 +655,9 @@
 				// }
 				// arrImgUrl = $('.preViewImg').eq(0).attr('src');
 				// console.log(arrImgUrl);
-				$('.popover').hide();
-			})
+
+			// 	$('.popover').hide();
+			// })
 			/*000*/
 
 		</script>
