修改投资页面

--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -25,9 +25,7 @@
 					<div class="bag-wrap">
 						<div class="asset">总资产<span style="font-size: .3rem;"></span></div>
 					</div>
-					<div class="amount">
-						<span>投资额度：</span><input class="inp" id="throw_inp" type="number" value="" placeholder="请输入人民币" />
-					</div>
+					
 
 					<div class="wtf_xiala">
 						<p>
@@ -35,10 +33,13 @@
 						</p>
 						<p style="margin-left: 0.1rem;width: 25%;" id="cu_name_input" data-name="">选择币种</p>
 						<p style="width: 53%;text-align: right;"></p>
-						<p class="p1" style="color: #7596d8;">CNY</p>
+						<p class="p1" style="color: #7596d8;">USD</p>
 						<p class="wtf_xl"><img style="width: 0.2rem;height: 0.15rem;padding-top: 0;margin-left: 0.1rem;" src="../../../public/images/wallet/wtf_xiala.jpg" /></p>
 					</div>
-					<div class="wtf_item2">
+					<div class="amount">
+						<span>投资数量：</span><input class="inp" id="throw_inp" type="number" value="" placeholder="请输入数量" />
+					</div>
+					<!-- <div class="wtf_item2">
 						<div class="wtf_item2_div">
 							<p>当前投资额度</p>
 							<div class="wtf_item2_c">
@@ -60,7 +61,7 @@
 								<p></p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					
 					<!--选择付款方式-->
