--- a/template/c_default/html/Login_retrieve.html
+++ b/template/c_default/html/Login_retrieve.html
@@ -22,7 +22,7 @@
                 <form action="" class="sms-retrieve-from">
                     <div class="info mistake"></div>
                     <div class="from-group">
-                        <span class="from-tit">手机号:</span>
+                        <span class="from-tit">手机号11:</span>
                         <div class="from-icon">
                                 <img src="../image/login/good.png" alt="">
                         <input type="phone" placeholder="请输入手机号" name="phone"class="pptt phone" value>
