--- a/application/index/view/Login_retrieve.html
+++ b/application/index/view/Login_retrieve.html
@@ -22,7 +22,7 @@
                 <form class="sms-retrieve-from">
                     <div class="info mistake"></div>
                     <div class="from-group">
-                        <span class="from-tit">用户名111:</span>
+                        <span class="from-tit">用户名:</span>
                         <div class="from-icon">
                             <img src="__PUBLIC__/images/login/shouji.png" alt="">
                             <input type="tel" placeholder="请输入用户名" name="username"class="pptt username" value>
@@ -30,7 +30,7 @@
                     </div>
                     <div class="info mistake"></div>
                     <div class="from-group">
-                        <span class="from-tit">手机号31222:</span>
+                        <span class="from-tit">手机号:</span>
                         <div class="from-icon">
                                 <img src="__PUBLIC__/images/login/shouji.png" alt="">
                         <input type="tel" placeholder="请输入手机号" name="mobile"class="pptt phone mobile" value>
