--- a/template/c_default/html/Login_retrieve.1.html
+++ b/template/c_default/html/Login_retrieve.1.html
@@ -22,7 +22,7 @@
                 <form action="" class="sms-retrieve-from">
                     <div class="info mistake"></div>
                     <div class="from-group">
-                        <span class="from-tit">手机号:</span>
+                        <span class="from-tit">手机号11111:</span>
                         <input type="phone" placeholder="请输入手机号" name="phone"class="pptt phone">
                     </div>
                     <div class="info mistake"></div>
