--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -127,7 +127,6 @@
 										<!--上传图片 tyle='file'-->
 										<a class="uploadFile2" href=" ">选择图片</a>
 										<input class="uploadFile" type="file" onchange="UpLoad(this,1)" name="file" id="" value="1" accept="image/*"  />
-					
 									</div>
 								</div>
 
@@ -143,9 +142,6 @@
 										<input class="lj_input3" type="text" name="note"  />
 										<button class="btn" onclick="phonecode('{$phone}')">获取验证码</button>
 									</div>
-									
-											
-									
 								</div>
 								<!--000-->
 								<div class="payment_cont_wz">
@@ -420,7 +416,7 @@
 				})
 				//点击背景隐藏and提取按钮清空提取金额的值
 				// $('.popover,.popover_affirm').click(function() {
-					
+					// $(".popover").hide();
 					// $('#popover_num').val("");
 					// $(".lj_input2").val("");
 					// $(".lj_input3").val("");
@@ -429,11 +425,11 @@
 					// $(".tipsText").show();
 				// })
 				//点击复投按钮清空提取金额的值
-				$('.voting,.voting_affirm').click(function() {
-					$(".voting").hide();
-					$('#voting_num').val("");
-					$(".lj_input3").val("");
-				})
+				// $('.voting,.voting_affirm').click(function() {
+				// 	$(".voting").hide();
+				// 	$('#voting_num').val("");
+				// 	$(".lj_input3").val("");
+				// })
 				//点击下拉列表
 				$(".list_tacitly").click(function(){
 			  		$(this).next().slideToggle(500)
@@ -474,7 +470,6 @@
 				    var verify = $('.lj_input3').val(); 
 				    var val = $(".popover_click").attr("data-id") 
 					var val1 = $(".voting_click").attr("data-id") 
-					// console.log($('#handleposition').serialize())
 					var url = "{:url('Index/pick')}";
 					var datas =  $('#handleposition').serialize()+'&type='+val+'&verify='+verify+'&sms_type='+2;
 					jq.getJSON(url,datas,function(data){						
@@ -492,6 +487,7 @@
 							}
 							else {
 									layer.msg(data.msg, {icon: 2, time: 2000}, function(){	
+									
 									});
 									
 							}
@@ -519,8 +515,9 @@
 							 }
 							 else{	 
 									layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-									 	window.location.reload(); 
+									 	// window.location.reload(); 
 									});
+									$('#captcha').attr('src',"{:url('login/captcha')}?"+Math.random());
 							 }
 						}
 					}); 
