--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -27,7 +27,7 @@
 							  <span class="from-tit">用户名:</span>
 							  <div class="from-icon">
 									<img src="__PUBLIC__images/login/shouji.png" alt="">
-							  <input type="tel" name="username" placeholder="请输入用户名"class="pptt username" value >
+							  <input type="text" name="username" placeholder="请输入用户名"class="pptt username" value >
 								</div>
 						  </div>
 						  <div class="info mistake"></div>
