--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -175,10 +175,10 @@
 							</p>
 							<p>
 								<span>提币额度</span>
-								<span class="total">
-									
-								</span>
+								<span><img class="su_img" src="" alt="币种图标"></span>
+								<span class="total"></span>
 							</p>
+							
 							<p>
 								<span>手续费</span>
 								<span class="charge"></span>
@@ -480,7 +480,8 @@
 										$(".total").html(data.result['su_num']);
 										$(".charge").html(data.result['su_charge']);
 										$(".time").html(data.result['su_time']);
-										// $(".su_img").attr("src",'uploads/20190315/0df1db2c2ee20754aec90be97791bb54.jpg');
+										// $(".img").html(data.result['su_log']);
+										$(".su_img").attr("src",data.result['su_log']);
 										// $(".time").html(Date('Y-m-d,H-s-i',data.result['su_time']))
 										$(".popover").hide();
 										$('.true_popUp_wrap').show();
