--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -175,7 +175,7 @@
 							</p>
 							<p>
 								<span>提币额度</span>
-								<span><img class="su_img" src="" alt="币种图标"></span>
+								<span><img class="su_img" style="widows: 0.5rem;height:0.5rem;" src="" alt="币种图标"></span>
 								<span class="total"></span>
 							</p>
 							
@@ -481,7 +481,9 @@
 										$(".charge").html(data.result['su_charge']);
 										$(".time").html(data.result['su_time']);
 										// $(".img").html(data.result['su_log']);
-										$(".su_img").attr("src",data.result['su_log']);
+										var su_img = "/"+data.result['su_log'];
+										console.log(su_img);
+										$(".su_img").attr("src",su_img);
 										// $(".time").html(Date('Y-m-d,H-s-i',data.result['su_time']))
 										$(".popover").hide();
 										$('.true_popUp_wrap').show();
