--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -176,7 +176,7 @@
 							<p>
 								<span>提币额度</span>
 								<span class="total">
-									
+									  
 								</span>
 							</p>
 							<p>
@@ -480,6 +480,7 @@
 										$(".total").html(data.result['su_num']);
 										$(".charge").html(data.result['su_charge']);
 										$(".time").html(data.result['su_time']);
+										// $('.total').html((data.result['alias_name']));
 										// $(".su_img").attr("src",'uploads/20190315/0df1db2c2ee20754aec90be97791bb54.jpg');
 										// $(".time").html(Date('Y-m-d,H-s-i',data.result['su_time']))
 										$(".popover").hide();
