--- a/application/index/view/Login_retrieve.html
+++ b/application/index/view/Login_retrieve.html
@@ -25,7 +25,7 @@
                         <span class="from-tit">用户名:</span>
                         <div class="from-icon">
                             <img src="__PUBLIC__/images/login/shouji.png" alt="">
-                            <input type="tel" placeholder="请输入用户名" name="username"class="pptt username" value>
+                            <input type="text" placeholder="请输入用户名" name="username"class="pptt username" value>
                         </div>
                     </div>
                     <div class="info mistake"></div>
