--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -175,8 +175,8 @@
 							</p>
 							<p>
 								<span>提币额度</span>
-								<span class="total"></span>
-								<span><img class="su_img" style="widows: 0.5rem;height:0.5rem;margin-left: 4.76rem;" src="" alt="币种图标"></span>
+								<span class="total" style="margin-left: 4.76rem;"></span>
+								<span><img class="su_img" style="widows: 0.5rem;height:0.5rem;" src="" alt="币种图标"></span>
 							</p>
 							
 							<p>
