--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -11,7 +11,16 @@
 		<link rel="stylesheet" href="__PUBLIC__/css/home/present.css" />
 		<link rel="stylesheet" href="__PUBLIC__/css/public/alertWrap.css" />
 		<link rel="stylesheet" href="__PUBLIC__/plugins/layui/css/layui.css" media="all" />
-	
+	    <style>
+	    	
+	    	.form-horizontal{
+	    		
+	    		overflow: scroll;
+	    		
+	    	}
+	    	
+	    	
+	    </style>
 	
 	</head>
 
@@ -175,8 +184,8 @@
 							</p>
 							<p>
 								<span>提币额度</span>
-								<span class="total" style="margin-left: 4.76rem;"></span>
-								<span><img class="su_img" style="widows: 0.5rem;height:0.5rem;" src="" alt="币种图标"></span>
+								<span><img class="su_img" style="widows: 0.5rem;height:0.5rem;margin-left: 4.76rem;" src="" alt="币种图标"></span>
+								<span class="total"></span>
 							</p>
 							
 							<p>
@@ -668,22 +677,25 @@
 			
 			
 			
+			
 //			input标签获取焦点
-        $('.text').focus(function(e){
+            $('#wallet_addr').focus(function(e){
             var u = navigator.userAgent;
             var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
             if(isAndroid){
-            $('.form-horizontal').height( $('.form-horizontal').height()+200)
-            $('.form-horizontal').scrollTop(200)
+            $('.form-horizontal').height( $('.form-horizontal').height()+400)
+            $('.form-horizontal').scrollTop(400)
             }
+            console.log("ccc")
+            
         })
         // 失去焦点时重新回到原来的状态
-        $('.text').blur(function(e){
+        $('#wallet_addr').blur(function(e){
             var u = navigator.userAgent;
             var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
             if(isAndroid){
-            $('body').height( $('body').height()-200)
-            $('body').scrollTop(0)
+            $('.form-horizontal').height( $('.form-horizontal').height()-400)
+            $('.form-horizontal').scrollTop(0)
             }
         })
 
