--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -19,7 +19,6 @@
 
     <!--主体-->
     <div style="margin-bottom:36px;">
-
         {block name="body"}{/block}
     </div>
 
@@ -27,7 +26,8 @@
 
     <script>
         var token = '{$token}';
-    </script> {block name="js"}{/block}
+    </script> 
+    {block name="js"}{/block}
     <!--页面JS脚本-->
     {block name="script"}{/block}
 </body>
