--- a/application/admin/view/income_info.html
+++ b/application/admin/view/income_info.html
@@ -70,7 +70,8 @@
 
     </div>
 </div>
-{/block} {block name="page"}
+{/block} 
+{block name="page"}
 <div class="btable-paged">
     <div class="layui-main">
         {$income_list->render()}
